Contact dark mode UI bug - Minor

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -199,21 +199,21 @@ html {
 
 @keyframes changeBG {
   0% {
-    background-color: rgb(255, 70, 70);
+    background-color: rgb(255, 90, 90);
   }
   20% {
-    background-color: rgb(255, 255, 99);
+    background-color: rgb(255, 255, 120);
   }
   40% {
-    background-color: rgb(93, 254, 90);
+    background-color: rgb(122, 254, 119);
   }
   60% {
-    background-color: rgb(70, 255, 249);
+    background-color: rgb(118, 255, 250);
   }
   80% {
-    background-color: rgb(254, 150, 71);
+    background-color: rgb(255, 180, 122);
   }
   100% {
-    background-color: rgb(188, 249, 88);
+    background-color: rgb(200, 255, 112);
   }
 }
